--- a/index.html
+++ b/index.html
@@ -1,11 +1,163 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Mini Hoopers Test</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Mini Hoopers Voting</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 24px; background: #f8fafc; color:#0f172a; }
+    .wrap { max-width: 1200px; margin: 0 auto; }
+    h1 { margin: 0 0 6px; font-size: 48px; line-height: 1.05; }
+    .sub { color: #475569; margin: 0 0 16px; font-size: 20px; }
+    .toolbar { display:flex; gap:10px; margin-bottom:16px; flex-wrap:wrap; }
+    input[type="search"]{
+      width: 420px; max-width: 100%;
+      padding: 12px 14px; border:1px solid #cbd5e1; border-radius:12px; font-size: 18px;
+    }
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+      gap:16px;
+    }
+    .card{
+      background:#fff; border:1px solid #e2e8f0; border-radius:14px; overflow:hidden;
+      box-shadow: 0 1px 2px rgba(0,0,0,0.04);
+    }
+    .card img{
+      width:100%; height:230px; object-fit:cover; display:block; background:#e2e8f0;
+    }
+    .meta{ padding:12px; }
+    .title{ font-weight:700; margin-bottom:8px; color:#0f172a; font-size: 18px; }
+    .caption{ color:#334155; line-height:1.45; font-size:15px; margin-bottom: 12px; }
+    .vote-btn{
+      width:100%;
+      border:1px solid #cbd5e1; border-radius:10px;
+      background:#0f172a; color:#fff; padding:10px 12px; cursor:pointer; font-weight:700;
+    }
+    .vote-btn:disabled { opacity: .6; cursor:not-allowed; }
+    .status{ margin-top:14px; color:#64748b; font-size:14px; white-space:pre-wrap; }
+  </style>
 </head>
-<body style="font-family:Arial;padding:24px;">
-  <h1>Mini Hoopers Test ✅</h1>
-  <p>If you see this, GitHub Pages deployment is working.</p>
+<body>
+  <div class="wrap">
+    <h1>Mini Hoopers 🏀🐾</h1>
+    <p class="sub">Live gallery from the “Approved Entries” tab.</p>
+
+    <div class="toolbar">
+      <input id="search" type="search" placeholder="Search by name or caption..." />
+    </div>
+
+    <div id="gallery" class="grid"></div>
+    <div id="status" class="status">Loading entries...</div>
+  </div>
+
+  <script>
+    // Your published feed (Approved Entries gid)
+    const FEED_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTFX7nWMq_3plmeprD6ncT1UQA1BiUYwjdh2SSnKstU3FSPKILos79nA-SAYddYV_gt2iyslYqqMWp2/gviz/tq?tqx=out:json&gid=1795204638";
+    const LOCAL_VOTE_KEY = "mini_hoopers_voted_once_2026";
+
+    let allRows = [];
+
+    function parseGviz(text) {
+      const start = text.indexOf("{");
+      const end = text.lastIndexOf("}");
+      if (start === -1 || end === -1) throw new Error("Invalid GViz response");
+      return JSON.parse(text.slice(start, end + 1));
+    }
+
+    function esc(s){
+      return String(s || "")
+        .replaceAll("&","&amp;")
+        .replaceAll("<","&lt;")
+        .replaceAll(">","&gt;")
+        .replaceAll('"',"&quot;")
+        .replaceAll("'","&#039;");
+    }
+
+    // Your column mapping from Approved Entries:
+    // F (index 5) Caption
+    // H (index 7) Post Img URLs
+    // I (index 8) Approved Mini Hoopers
+    function mapRow(r){
+      const c = r.c || [];
+      return {
+        caption: c[5]?.v ? String(c[5].v).trim() : "",
+        image_url: c[7]?.v ? String(c[7].v).trim() : "",
+        id: c[8]?.v ? String(c[8].v).trim() : ""
+      };
+    }
+
+    function validImageUrl(url){ return /^https?:\/\/.+/i.test(url); }
+
+    function hasVotedLocally(){
+      return localStorage.getItem(LOCAL_VOTE_KEY) === "1";
+    }
+
+    function render(rows){
+      const gallery = document.getElementById("gallery");
+      const status = document.getElementById("status");
+      gallery.innerHTML = "";
+
+      const voted = hasVotedLocally();
+
+      rows.forEach(item => {
+        const card = document.createElement("article");
+        card.className = "card";
+        card.innerHTML = `
+          <img loading="lazy" src="${esc(item.image_url)}" alt="${esc(item.id || "Mini Hooper")}" />
+          <div class="meta">
+            <div class="title">${esc(item.id || "Mini Hooper")}</div>
+            <div class="caption">${esc(item.caption || "")}</div>
+            <button class="vote-btn" ${voted ? "disabled" : ""}>${voted ? "Vote submitted" : "Vote"}</button>
+          </div>
+        `;
+
+        const btn = card.querySelector(".vote-btn");
+        btn.addEventListener("click", () => {
+          // local-only placeholder vote (no backend yet)
+          localStorage.setItem(LOCAL_VOTE_KEY, "1");
+          alert(`Thanks! Your vote for ${item.id} was recorded on this browser.`);
+          render(rows);
+        });
+
+        gallery.appendChild(card);
+      });
+
+      status.textContent = `Showing ${rows.length} approved entries.`;
+    }
+
+    function applyFilter(){
+      const q = document.getElementById("search").value.trim().toLowerCase();
+      if(!q) return render(allRows);
+      render(allRows.filter(x =>
+        (x.id || "").toLowerCase().includes(q) ||
+        (x.caption || "").toLowerCase().includes(q)
+      ));
+    }
+
+    async function load(){
+      const status = document.getElementById("status");
+      try{
+        const res = await fetch(FEED_URL, { cache: "no-store" });
+        if (!res.ok) throw new Error("Feed HTTP " + res.status);
+
+        const txt = await res.text();
+        const data = parseGviz(txt);
+
+        const raw = data?.table?.rows || [];
+        allRows = raw
+          .map(mapRow)
+          .filter(x => x.id && x.image_url && validImageUrl(x.image_url));
+
+        render(allRows);
+      } catch (e) {
+        console.error(e);
+        status.textContent = "Failed to load entries.\n" + (e?.message || e);
+      }
+    }
+
+    document.getElementById("search").addEventListener("input", applyFilter);
+    load();
+  </script>
 </body>
 </html>
