--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <script>
     // Your published feed (Approved Entries gid)
-    const FEED_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTFX7nWMq_3plmeprD6ncT1UQA1BiUYwjdh2SSnKstU3FSPKILos79nA-SAYddYV_gt2iyslYqqMWp2/gviz/tq?tqx=out:json&gid=1795204638";
+    const FEED_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTFX7nWMq_3plmeprD6ncT1UQA1BiUYwjdh2SSnKstU3FSPKILos79nA-SAYddYV_gt2iyslYqqMWp2/pubhtml?gid=1795204638&single=true";
     const LOCAL_VOTE_KEY = "mini_hoopers_voted_once_2026";
 
     let allRows = [];
