--- a/index.html
+++ b/index.html
@@ -50,114 +50,112 @@
     <div id="gallery" class="grid"></div>
     <div id="status" class="status">Loading entries...</div>
   </div>
-
   <script>
-    // Your published feed (Approved Entries gid)
-    const FEED_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTFX7nWMq_3plmeprD6ncT1UQA1BiUYwjdh2SSnKstU3FSPKILos79nA-SAYddYV_gt2iyslYqqMWp2/pubhtml?gid=1795204638&single=true";
-    const LOCAL_VOTE_KEY = "mini_hoopers_voted_once_2026";
+  // IMPORTANT: use your real spreadsheet ID from /d/<ID>/edit
+  // and your Approved Entries gid
+  const FEED_URL = "https://docs.google.com/spreadsheets/d/SPREADSHEET_ID/gviz/tq?tqx=out:json&gid=1795204638";
 
-    let allRows = [];
+  let allRows = [];
 
-    function parseGviz(text) {
-      const start = text.indexOf("{");
-      const end = text.lastIndexOf("}");
-      if (start === -1 || end === -1) throw new Error("Invalid GViz response");
-      return JSON.parse(text.slice(start, end + 1));
+  function extractGvizJson(text) {
+    // Detect HTML responses (wrong URL/permissions/redirect)
+    const t = text.trim();
+    if (t.startsWith("<!DOCTYPE html") || t.startsWith("<html")) {
+      throw new Error("Feed returned HTML, not GViz JSON. Check FEED_URL, publish settings, and sheet ID.");
     }
 
-    function esc(s){
-      return String(s || "")
-        .replaceAll("&","&amp;")
-        .replaceAll("<","&lt;")
-        .replaceAll(">","&gt;")
-        .replaceAll('"',"&quot;")
-        .replaceAll("'","&#039;");
+    // Preferred parse: wrapped callback format
+    const match = t.match(/google\.visualization\.Query\.setResponse\(([\s\S]*?)\);?\s*$/);
+    if (match && match[1]) return JSON.parse(match[1]);
+
+    // Fallback parse: first {...} block
+    const start = t.indexOf("{");
+    const end = t.lastIndexOf("}");
+    if (start === -1 || end === -1 || end <= start) {
+      throw new Error("Could not find JSON object in GViz response.");
     }
+    return JSON.parse(t.slice(start, end + 1));
+  }
 
-    // Your column mapping from Approved Entries:
-    // F (index 5) Caption
-    // H (index 7) Post Img URLs
-    // I (index 8) Approved Mini Hoopers
-    function mapRow(r){
-      const c = r.c || [];
-      return {
-        caption: c[5]?.v ? String(c[5].v).trim() : "",
-        image_url: c[7]?.v ? String(c[7].v).trim() : "",
-        id: c[8]?.v ? String(c[8].v).trim() : ""
-      };
+  function esc(s){
+    return String(s || "")
+      .replaceAll("&","&amp;")
+      .replaceAll("<","&lt;")
+      .replaceAll(">","&gt;")
+      .replaceAll('"',"&quot;")
+      .replaceAll("'","&#039;");
+  }
+
+  // Your columns:
+  // F = index 5 (Caption)
+  // H = index 7 (Post Img URLs)
+  // I = index 8 (Approved Mini Hoopers)
+  function mapRow(r){
+    const c = r.c || [];
+    return {
+      caption: c[5]?.v ? String(c[5].v).trim() : "",
+      image_url: c[7]?.v ? String(c[7].v).trim() : "",
+      id: c[8]?.v ? String(c[8].v).trim() : ""
+    };
+  }
+
+  function validImageUrl(url){
+    return /^https?:\/\/.+/i.test(url);
+  }
+
+  function render(rows){
+    const gallery = document.getElementById("gallery");
+    const status = document.getElementById("status");
+    gallery.innerHTML = "";
+
+    rows.forEach(item => {
+      const card = document.createElement("article");
+      card.className = "card";
+      card.innerHTML = `
+        <img loading="lazy" src="${esc(item.image_url)}" alt="${esc(item.id || "Mini Hooper")}" />
+        <div class="meta">
+          <div class="title">${esc(item.id || "Mini Hooper")}</div>
+          <div class="caption">${esc(item.caption || "")}</div>
+        </div>
+      `;
+      gallery.appendChild(card);
+    });
+
+    status.textContent = `Showing ${rows.length} approved entries.`;
+  }
+
+  function applyFilter(){
+    const q = document.getElementById("search").value.trim().toLowerCase();
+    if(!q) return render(allRows);
+
+    const filtered = allRows.filter(x =>
+      (x.id || "").toLowerCase().includes(q) ||
+      (x.caption || "").toLowerCase().includes(q)
+    );
+    render(filtered);
+  }
+
+  async function load(){
+    const status = document.getElementById("status");
+    try{
+      const res = await fetch(FEED_URL, { cache: "no-store" });
+      if (!res.ok) throw new Error(`Feed HTTP ${res.status}`);
+
+      const txt = await res.text();
+      const data = extractGvizJson(txt);
+
+      const raw = data?.table?.rows || [];
+      allRows = raw.map(mapRow).filter(x => x.id && x.image_url && validImageUrl(x.image_url));
+
+      render(allRows);
+    } catch (e) {
+      console.error(e);
+      status.textContent = `Failed to load entries.\n${e.message}`;
     }
+  }
 
-    function validImageUrl(url){ return /^https?:\/\/.+/i.test(url); }
-
-    function hasVotedLocally(){
-      return localStorage.getItem(LOCAL_VOTE_KEY) === "1";
-    }
-
-    function render(rows){
-      const gallery = document.getElementById("gallery");
-      const status = document.getElementById("status");
-      gallery.innerHTML = "";
-
-      const voted = hasVotedLocally();
-
-      rows.forEach(item => {
-        const card = document.createElement("article");
-        card.className = "card";
-        card.innerHTML = `
-          <img loading="lazy" src="${esc(item.image_url)}" alt="${esc(item.id || "Mini Hooper")}" />
-          <div class="meta">
-            <div class="title">${esc(item.id || "Mini Hooper")}</div>
-            <div class="caption">${esc(item.caption || "")}</div>
-            <button class="vote-btn" ${voted ? "disabled" : ""}>${voted ? "Vote submitted" : "Vote"}</button>
-          </div>
-        `;
-
-        const btn = card.querySelector(".vote-btn");
-        btn.addEventListener("click", () => {
-          // local-only placeholder vote (no backend yet)
-          localStorage.setItem(LOCAL_VOTE_KEY, "1");
-          alert(`Thanks! Your vote for ${item.id} was recorded on this browser.`);
-          render(rows);
-        });
-
-        gallery.appendChild(card);
-      });
-
-      status.textContent = `Showing ${rows.length} approved entries.`;
-    }
-
-    function applyFilter(){
-      const q = document.getElementById("search").value.trim().toLowerCase();
-      if(!q) return render(allRows);
-      render(allRows.filter(x =>
-        (x.id || "").toLowerCase().includes(q) ||
-        (x.caption || "").toLowerCase().includes(q)
-      ));
-    }
-
-    async function load(){
-      const status = document.getElementById("status");
-      try{
-        const res = await fetch(FEED_URL, { cache: "no-store" });
-        if (!res.ok) throw new Error("Feed HTTP " + res.status);
-
-        const txt = await res.text();
-        const data = parseGviz(txt);
-
-        const raw = data?.table?.rows || [];
-        allRows = raw
-          .map(mapRow)
-          .filter(x => x.id && x.image_url && validImageUrl(x.image_url));
-
-        render(allRows);
-      } catch (e) {
-        console.error(e);
-        status.textContent = "Failed to load entries.\n" + (e?.message || e);
-      }
-    }
-
-    document.getElementById("search").addEventListener("input", applyFilter);
-    load();
-  </script>
+  document.getElementById("search").addEventListener("input", applyFilter);
+  load();
+</script>
 </body>
 </html>
